TODO: 
  - FStab: force fs_freq and fs_passno to be 0 with bind mounted fs
    (require re-work of warp mechanism)
  - rework warp registration mechanism

2011-04-07 Dominique Dumont  <domi.dumont@free.fr> 1.242

    * Application changes:
        * dpkg control: added Build-Conflicts field
	* dpkg: Added model for debian/source/options and debian/clean files

    * Framework changes:
       * Value: don't perform value check when fetching standard or default value
       * Backend/Plainfile: now support list element in the form of multi line file.
         Each line of the file is a value of the list.
       * t/fuse_ui.t: skip test if lsmod cannot be used (e.g. Mandriva)
       * t/debian*.t: skip test when /etc/debian_version is not found

2011-04-07 Dominique Dumont  <domi.dumont@free.fr> 1.241
    
    * Framework changes:
       * Build depend on Test::Differences
       * Load and grab: fix to accept '-' in element names 
       * Model.pm: Added value help and summary in generated documentation
       * DumpAsData: skip hash keys containing undef values

2011-04-05 Dominique Dumont  <domi.dumont@free.fr> 1.240
    
    * Framework changes:
        * Most *.pm: replaced 'no Moose' by 'no Any::Moose' 
        
2011-04-05 Dominique Dumont  <domi.dumont@free.fr> 1.238
    
    * Framework changes:
        * Build.PL: removed dead code that cause downstream pacaking problems.
        * Model.pm: fix cosmetic issue with doc generation.
        
2011-04-04 Dominique Dumont  <domi.dumont@free.fr> 1.237
    
    * Framework changes:
        * added MouseX::NativeTraits dependency (fix RT #67196)
        * config-edit: fixed typo (fix RT #66403)
        * Value, Node, AnyId: use dclone to backup constructor parameters
        * Model: Correctly write author and copyright in doc (i.e not as ARRAY0x0...)
        * Yaml backend: fill full_dump option (did not work when set to 0)
    * Application changes:
        * dpkg control dependency: 